MMA-7584 Fikset code-scanning issues