@@ -7,7 +7,6 @@ import no.nav.dokopp.consumer.saf.exceptions.SafJournalpostQueryTechnicalExcepti
 import no.nav.dokopp.exception.UgyldigInputverdiException;
 import no.nav.dokopp.qopp001.JournalpostResponse;
 import org.slf4j.MDC;
-import org.springframework.http.HttpHeaders;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
@@ -48,7 +47,7 @@ public class SafJournalpostConsumer {
 	@Retryable(retryFor = SafJournalpostQueryTechnicalException.class, backoff = @Backoff(delay = DELAY_SHORT, multiplier = BACKOFF_MULTIPLIER))
 	public JournalpostResponse hentJournalpost(String journalpostId) {
 		SafResponse safResponse = webClient.post()
-								.uri("/graphql")
+				.uri("/graphql")
 				.headers(httpHeaders -> httpHeaders.add(NAV_CALLID, MDC.get(NAV_CALL_ID)))
 				.attributes(clientRegistrationId(CLIENT_REGISTRATION_SAF))
 				.bodyValue(createHentJournalpostRequest(journalpostId))
@@ -57,13 +56,12 @@ public class SafJournalpostConsumer {
 				.doOnError(handleSafErrors(journalpostId))
 				.block();
 		List<SafResponse.SafError> errors = safResponse == null ? null : safResponse.getErrors();
-		return (errors == null || errors.isEmpty()) ? SafJournalpostMapper.map(safResponse.getData().getJournalpost(), journalpostId) : handleSafError(errors, journalpostId);
+		if (safResponse == null) {
+			throw new SafJournalpostQueryTechnicalException("Kall til saf feilet. data feltet er null");
+		}
+		SafResponse.SafHentJournalpost safResponseData = safResponse.getData();
+		return (errors == null || errors.isEmpty()) ? SafJournalpostMapper.map(safResponseData.getJournalpost(), journalpostId) : handleSafError(errors, journalpostId);
 
-	}
-
-	private HttpHeaders createHeaders() {
-		HttpHeaders headers = new HttpHeaders();
-		return headers;
 	}
 
 	private SafRequest createHentJournalpostRequest(String journalpostId) {
@@ -81,8 +79,8 @@ public class SafJournalpostConsumer {
 	}
 
 	private JournalpostResponse handleSafError(List<SafResponse.SafError> errors, String journalpostId) {
-		String errorCode = errors.get(0).getExtensions().getCode();
-		String errorMsg = errors.get(0).getMessage();
+		String errorCode = errors.getFirst().getExtensions().getCode();
+		String errorMsg = errors.getFirst().getMessage();
 		if (SERVER_ERROR_CODE.equals(errorCode)) {
 			throw new SafJournalpostQueryTechnicalException(format("Teknisk feil ved kall mot SAF for journalpostId=%s, feilmelding:%s", journalpostId, errorMsg));
 		} else if (JP_NOT_FOUND_ERROR_CODE.equals(errorCode)) {
